--- a/poromodo-clock/style.css
+++ b/poromodo-clock/style.css
@@ -10,13 +10,19 @@ h1 {
 }
 
 .header {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
     text-align: center;
     font-size: 1em;
     margin: 0 auto 0;
 }
 
 div.container {
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    margin-left: 16px;
 }
 
 .number {
@@ -28,6 +34,7 @@ i {
     display: inline-block;
     font-size: 2.5em;
     cursor: pointer;
+    padding: 0 12px;
 }
 
 h2 {
@@ -38,12 +45,12 @@ h2 {
 }
 
 #time {
-    font-size: 3em;
+    font-size: 4em;
 }
 
 .timer {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     margin: 0 auto 0;
     border: 5px rgb(63, 206, 134) solid;
     border-radius: 50%;
